Add null checks